@@ -1,20 +1,84 @@
 # Live Migrator
 
-A framework for performing live object migrations in running JVM applications without downtime.
+Replace every instance of an old class version with a new one — and rewrite every reference to them — in a **running** JVM, without restarting the process.
 
-## Overview
+Live Migrator discovers all instances of a source class on the heap, builds a replacement for each via a user-supplied migrator, then rewrites every reference in the application (fields, arrays, collections, maps, registries, records) to point at the new objects. Heap discovery uses a small native JVMTI agent; reference patching is pure reflection.
 
-Live Migrator enables you to migrate object instances from one class version to another in a running JVM, replacing all references seamlessly. This is useful for:
+Use it for:
 
-- **Zero-downtime deployments** - Migrate data structures without restarting the application
-- **Schema evolution** - Update object models while the application continues to serve requests
-- **Hot fixes** - Replace buggy class implementations with fixed versions at runtime
+- **Zero-downtime evolution** — change an in-memory data model while the app keeps serving requests
+- **Representation upgrades** — migrate live state to a new class shape
+- **Runtime hot-fixes** — swap a buggy class implementation for a corrected one
+
+---
+
+## Table of contents
+
+- [Live Migrator](#live-migrator)
+  - [Table of contents](#table-of-contents)
+  - [How it works](#how-it-works)
+  - [Architecture](#architecture)
+  - [Project structure](#project-structure)
+  - [Quick start](#quick-start)
+    - [Prerequisites](#prerequisites)
+    - [Demo — local](#demo--local)
+    - [Demo — Docker](#demo--docker)
+  - [Core concepts](#core-concepts)
+    - [`ClassMigrator`](#classmigrator)
+    - [`MigrationEngine`](#migrationengine)
+    - [Attaching to a running JVM](#attaching-to-a-running-jvm)
+  - [Annotations](#annotations)
+    - [`@Migrator`](#migrator)
+    - [`@PhaseListener`](#phaselistener)
+    - [`@CommitComponent` / `@RollbackComponent`](#commitcomponent--rollbackcomponent)
+    - [`@SmokeTestComponent`](#smoketestcomponent)
+    - [`@UpdateRegistry`](#updateregistry)
+  - [Generic container updates](#generic-container-updates)
+  - [Configuration](#configuration)
+  - [Timeouts](#timeouts)
+  - [Metrics \& monitoring](#metrics--monitoring)
+    - [Metrics](#metrics)
+    - [State \& history](#state--history)
+    - [Alert logging](#alert-logging)
+  - [Performance \& guarantees](#performance--guarantees)
+  - [Creating a migration payload](#creating-a-migration-payload)
+  - [JVM requirements](#jvm-requirements)
+  - [Building \& testing](#building--testing)
+    - [Test tiers](#test-tiers)
+  - [API reference](#api-reference)
+    - [`MigrationEngine`](#migrationengine-1)
+    - [`MigrationConfig`](#migrationconfig)
+    - [`MigrationConfigLoader`](#migrationconfigloader)
+    - [`MigrationMetrics`](#migrationmetrics)
+    - [`MigrationState` / `MigrationHistoryEntry`](#migrationstate--migrationhistoryentry)
+    - [`RegistryUpdater`](#registryupdater)
+    - [`MigratorDescriptor`](#migratordescriptor)
+    - [`AgentLoader`](#agentloader)
+    - [Enums](#enums)
+
+---
+
+## How it works
+
+A migration runs as an ordered sequence of phases (each tracked by `MigrationMetrics.Phase`):
+
+1. **First pass — allocate & migrate.** For each migrator, snapshot all live instances of its source class (via the JVMTI agent), invoke the migrator to build a replacement for each, and record the `old → new` mapping in a forwarding table.
+2. **Critical phase.** The phase listener is signalled to quiesce the application, then:
+   - **Second pass** — walk the heap and rewrite every reference to a migrated object.
+   - **Registry update** — patch `@UpdateRegistry` fields and generic containers (`List<T>`, `Map<K,V>`, `Set<T>`, arrays, …).
+   - The phase listener is signalled to resume.
+3. **Smoke test.** Run smoke tests / health checks against the new objects; on failure, roll back.
+4. **Commit.** Finalize (delete the checkpoint) and advance the native epoch.
+
+The engine only *signals* the application to pause/resume — it never pauses threads itself. Coordinating quiescence is the phase listener's job. If anything fails before commit, the engine triggers a rollback; the commit/rollback decision is made exactly once even when an overall timeout races the migration to completion.
+
+---
 
 ## Architecture
 
 ```
 ┌─────────────────────────────────────────────────────────────────────┐
-│                         Running JVM                                 │
+│                            Running JVM                              │
 │  ┌──────────────┐     ┌────────────────────────────────────────┐    │
 │  │ service-demo │     │            migration-payload           │    │
 │  │              │     │  ┌───────────────┐  ┌───────────────┐  │    │
@@ -22,298 +86,223 @@ Live Migrator enables you to migrate object instances from one class version to 
 │  │  instances   │     │  │  @Migrator    │  │   instances   │  │    │
 │  │              │     │  └───────────────┘  └───────────────┘  │    │
 │  └──────────────┘     └────────────────────────────────────────┘    │
-│         ▲                         │                                 │
-│         │                         ▼                                 │
-│  ┌──────┴──────────────────────────────────────────────────────┐    │
-│  │                    MigrationEngine (migrator)               │    │
-│  │  1. Heap Walk (JVMTI)  →  Find all OldUser instances        │    │
-│  │  2. Migrate            →  Create NewUser for each OldUser   │    │
-│  │  3. Patch References   →  Replace all OldUser → NewUser     │    │
-│  │  4. Update Registries  →  Update caches, maps, collections  │    │
-│  └─────────────────────────────────────────────────────────────┘    │
+│         ▲                          │                                │
+│         │                          ▼                                │
+│  ┌──────┴───────────────────────────────────────────────────────┐   │
+│  │                    MigrationEngine (migrator)                │   │
+│  │  1. Heap walk (JVMTI)   →  find all OldUser instances        │   │
+│  │  2. Migrate             →  create a NewUser for each OldUser │   │
+│  │  3. Patch references    →  replace every OldUser → NewUser   │   │
+│  │  4. Update registries   →  caches, maps, collections, arrays │   │
+│  └──────────────────────────────────────────────────────────────┘   │
 └─────────────────────────────────────────────────────────────────────┘
          ▲
          │ Java Attach API
-         │
-┌────────┴─────────┐
-│ run-migration.sh │
-│ (VirtualMachine  │
-│  AgentLoader)    │
-└──────────────────┘
+┌────────┴─────────────┐
+│ VirtualMachineAgent  │
+│ Loader (run-*.sh)    │
+└──────────────────────┘
 ```
 
-## Project Structure
+---
+
+## Project structure
 
 ```
-Migrator/
-├── migrator/                 # Core migrator framework
+/
+├── migrator/                 # Core framework — the published library
 │   └── src/main/java/migrator/
-│       ├── ClassMigrator.java        # Interface for migrator implementations
-│       ├── engine/
-│       │   ├── MigrationEngine.java        # Main orchestrator
-│       │   ├── ComponentResolver.java      # Resolves annotated components
-│       │   ├── MigrationTimeoutConfig.java # Timeout configuration
-│       │   └── TimeoutExecutor.java        # Timeout execution utility
-│       ├── annotations/              # @Migrator, @CommitComponent, etc.
-│       ├── load/                     # Agent loading (VirtualMachineAgentLoader)
-│       ├── registry/                 # Registry update utilities
-│       ├── heap/                     # Heap walking (JVMTI integration)
-│       ├── patch/                    # Reference patching
-│       ├── phase/                    # Migration phase listeners
-│       ├── commit/                   # Commit/rollback management
-│       ├── smoke/                    # Smoke testing after migration
-│       ├── scanner/                  # Annotation scanning
-│       ├── config/                   # Configuration (MigrationConfig, loader)
-│       ├── metrics/                  # Metrics collection (MigrationMetrics)
-│       ├── state/                    # Migration state tracking
+│       ├── ClassMigrator.java        # The interface you implement
+│       ├── engine/                   # MigrationEngine, ComponentResolver, TimeoutExecutor, timeouts
+│       ├── annotations/              # @Migrator, @CommitComponent, @RollbackComponent, …
+│       ├── scanner/                  # Classpath annotation scanning
+│       ├── plan/                     # MigrationPlan (ordering + cycle detection), MigratorDescriptor
+│       ├── heap/                     # JVMTI heap walking (NativeHeapWalker)
+│       ├── patch/                    # ForwardingTable + iterative, cycle-safe reference patcher
+│       ├── registry/                 # @UpdateRegistry + generic-container updates
+│       ├── phase/                    # Phase listeners + MigrationContext
+│       ├── commit/                   # Commit / rollback management
+│       ├── crac/                     # CRaC checkpoint/restore controller
+│       ├── smoke/                    # Smoke tests & health checks
+│       ├── config/                   # MigrationConfig + loader (properties/YAML)
+│       ├── metrics/                  # MigrationMetrics + collector
+│       ├── state/                    # Global MigrationState + history
 │       ├── alert/                    # Structured logging (MigrationAlertLogger)
-│       ├── crac/                     # CRaC checkpoint/restore
 │       └── exceptions/               # Exception types
-│
-├── examples/                 # Example usage (not part of the library)
-│   ├── service-demo/         # Example service to migrate
-│   │   └── src/main/java/service/
-│   │       ├── ServiceMain.java          # Service entry point
-│   │       ├── UserFactory.java          # Abstract Factory for User
-│   │       ├── JsonWriter.java           # JSON serialization utility
-│   │       └── model/
-│   │           ├── User.java             # Common interface
-│   │           └── OldUser.java          # Original implementation
-│   └── migration-payload/    # Example migration agent
-│       └── src/main/java/migration/
-│           ├── MigrationAgent.java       # Java agent entry point
-│           ├── MigrationPhaseListenerImpl.java  # Phase listener implementation
-│           ├── NewUserFactory.java       # Factory for NewUser
-│           ├── NoopCommitManager.java    # Commit manager implementation
-│           ├── NoopRollbackManager.java  # Rollback manager implementation
-│           ├── NoopSmokeTest.java        # Smoke test implementation
-│           ├── migrator/
-│           │   └── UserMigrator.java     # OldUser → NewUser migrator
-│           └── model/
-│               └── NewUser.java          # New class version
 │
 ├── agent/                    # Native JVMTI agent for heap walking
 │   └── agent.c
 │
-└── pom.xml                   # Parent POM (mvn install builds the library)
+├── examples/                 # Demo (not part of the library)
+│   ├── service-demo/         # A service holding OldUser instances
+│   ├── migration-payload/    # A migration agent (UserMigrator: OldUser → NewUser)
+│   ├── Dockerfile, docker-compose.yml
+│   └── run-service.sh, run-migration.sh, migrate.sh, docker-migrate.sh
+│
+└── pom.xml                   # Parent POM
 ```
 
-## Quick Start
+---
+
+## Quick start
 
 ### Prerequisites
 
 - JDK 21+
 - Maven 3.8+
-- GCC (for building native agent)
-- Docker & Docker Compose (for Docker demo)
+- GCC (to build the native agent)
+- Docker & Docker Compose (only for the Docker demo)
 
-### Running the Demo (Local)
+### Demo — local
 
-1. **Start the demo service:**
-   ```bash
-   ./examples/run-service.sh
-   ```
-   This builds and starts a service with `OldUser` instances.
+```bash
+# 1. Build the native agent + start a service holding OldUser instances
+./examples/run-service.sh
 
-2. **In another terminal, trigger the migration:**
-   ```bash
-   ./examples/run-migration.sh
-   ```
-   This attaches to the running JVM and migrates all `OldUser` → `NewUser`.
+# 2. In another terminal, attach and migrate OldUser → NewUser
+./examples/run-migration.sh
+```
 
-3. **Observe the migration:**
-   - Service continues running without interruption
-   - All `OldUser` instances are replaced with `NewUser`
-   - New users created after migration are `NewUser` instances
+The service keeps serving throughout. After the migration, all `OldUser` instances are `NewUser`, and users created afterwards are already `NewUser`.
 
-### Running the Demo (Docker)
+### Demo — Docker
 
-1. **Build and start the service:**
-   ```bash
-   docker compose -f examples/docker-compose.yml build
-   docker compose -f examples/docker-compose.yml up -d service
-   ```
+```bash
+docker compose -f examples/docker-compose.yml build
 
-2. **Wait for the service to become healthy:**
-   ```bash
-   docker compose -f examples/docker-compose.yml ps
-   ```
+docker compose -f examples/docker-compose.yml up -d service
+docker compose -f examples/docker-compose.yml ps           # wait until healthy
 
-3. **Run the migration:**
-   ```bash
-   docker compose -f examples/docker-compose.yml --profile migrate up migrator
-   ```
-   Or use the helper script:
-   ```bash
-   ./examples/docker-migrate.sh
-   ```
+docker compose -f examples/docker-compose.yml --profile migrate up migrator
 
-4. **Check service logs to see migration results:**
-   ```bash
-   docker compose -f examples/docker-compose.yml logs service
-   ```
+docker compose -f examples/docker-compose.yml logs service
+docker compose -f examples/docker-compose.yml --profile migrate down -v
+```
 
-5. **Clean up:**
-   ```bash
-   docker compose -f examples/docker-compose.yml --profile migrate down -v
-   ```
+---
 
-## Core Concepts
+## Core concepts
 
-### ClassMigrator
+### `ClassMigrator`
 
-The `ClassMigrator` interface defines how to convert objects from one class to another:
+Defines how to convert an old instance into a new one:
 
 ```java
 public interface ClassMigrator<OldT, NewT> {
     NewT migrate(OldT old) throws MigrateException;
-    default void validate(NewT migrated) throws MigrateException {}
+    default void validate(NewT migrated) throws MigrateException {}   // optional post-check
 }
 ```
 
-### @Migrator Annotation
+Migrators should be side-effect free (no DB/network writes) and ideally idempotent. The source and target types must share a common interface — it's inferred automatically and used for type-safe container updates.
 
-Mark your migrator class with `@Migrator` for automatic discovery:
+### `MigrationEngine`
 
-```java
-@Migrator
-public class UserMigrator implements ClassMigrator<OldUser, NewUser> {
-    @Override
-    public NewUser migrate(OldUser old) throws MigrateException {
-        return new NewUser(old.id, old.name);
-    }
-}
-```
-
-### MigrationEngine
-
-The `MigrationEngine` orchestrates the entire migration process:
+The orchestrator. The simplest entry points are the static `createAndMigrate(...)` factories:
 
 ```java
-// Simple usage - scans for @Migrator annotated classes
+// Scan the classpath for @Migrator-annotated components and migrate
 MigrationEngine.createAndMigrate(Set.of(ServiceMain.class));
 
-// With custom classloader and JAR path
-MigrationEngine.createAndMigrate(
-    classesToScan,
-    classLoader,
-    jarPath
-);
+// With a custom classloader + JAR path (e.g. from a loaded agent)
+MigrationEngine.createAndMigrate(classesToScan, classLoader, jarPath);
 
-// With generic container updates
+// With explicit generic-container updates
 MigrationEngine.createAndMigrate(
-    classesToScan,
-    classLoader,
-    jarPath,
-    List.of(userCache, userRegistry),   // Containers to update
-    User.class                          // Common interface type
-);
+    classesToScan, classLoader, jarPath,
+    List.of(userCache, userRegistry),   // containers to update
+    User.class);                        // common interface of their elements
 ```
 
-### Attaching to Running JVM
+> **Config requirement:** `createAndMigrate(...)` and `loadAndApplyConfig()` call `MigrationConfigLoader.load()`, which **requires** a `migration.properties` or `migration.yml` on the classpath (it throws `MigrationConfigException` otherwise). To run without a config file, construct the engine directly and configure it programmatically — see [Configuration](#configuration).
 
-Use `VirtualMachineAgentLoader` to attach to a running JVM:
+### Attaching to a running JVM
 
 ```java
-// Attach and load migration agent
 LoaderResult result = MigrationEngine.attachAndLoad(pid, agentJarPath);
 
-// Or use the loader directly
+// or directly
 AgentLoader loader = new VirtualMachineAgentLoader();
 LoaderResult result = loader.load(pid, agentJarPath);
 ```
 
+---
+
 ## Annotations
 
-### @Migrator
+Components are discovered by scanning the classpath (and, optionally, a supplied classloader/JAR).
 
-Marks a class as the primary migrator. Must implement `ClassMigrator<OldT, NewT>`.
+| Annotation | Purpose | Cardinality |
+|------------|---------|-------------|
+| `@Migrator` | The migrator (`ClassMigrator<OldT, NewT>`) | exactly one |
+| `@PhaseListener` | Coordinates app quiescence around the critical phase | exactly one |
+| `@CommitComponent` | Commit manager (`extends CommitManager`) | exactly one |
+| `@RollbackComponent` | Rollback manager (`extends RollbackManager`) | exactly one |
+| `@SmokeTestComponent` | Post-migration smoke test (`implements SmokeTest`) | at least one |
+| `@UpdateRegistry` | Marks registry/cache fields to update | any number |
+
+### `@Migrator`
 
 ```java
 @Migrator
-public class UserMigrator implements ClassMigrator<OldUser, NewUser> { ... }
-```
-
-### @CommitComponent
-
-Marks a class that handles commit logic after successful migration.
-
-```java
-@CommitComponent
-public class MyCommitManager extends CommitManager {
-    public MyCommitManager() {
-        super(new MyCracController());
+public class UserMigrator implements ClassMigrator<OldUser, NewUser> {
+    @Override public NewUser migrate(OldUser old) {
+        return new NewUser(old.id, old.name, "unknown@example.com");
     }
 }
 ```
 
-### @RollbackComponent
-
-Marks a class that handles rollback if migration fails.
-
-```java
-@RollbackComponent
-public class MyRollbackManager extends RollbackManager {
-    public MyRollbackManager() {
-        super(new MyCracController());
-    }
-}
-```
-
-### @PhaseListener
-
-Marks a class that receives migration phase callbacks.
+### `@PhaseListener`
 
 ```java
 @PhaseListener
 public class MyPhaseListener implements MigrationPhaseListener {
-    public void onBeforeCriticalPhase(MigrationContext ctx) { /* pause app */ }
-    public void onAfterCriticalPhase(MigrationContext ctx) { /* resume app */ }
+    public void onBeforeCriticalPhase(MigrationContext ctx) { /* drain & pause */ }
+    public void onAfterCriticalPhase(MigrationContext ctx)  { /* resume */ }
 }
 ```
 
-**MigrationContext provides:**
-| Method | Description |
-|--------|-------------|
-| `migrationId()` | Current migration identifier |
-| `plan()` | The migration plan being executed |
-| `startedAtNanos()` | Timestamp when migration started (in nanos) |
+`MigrationContext` exposes `migrationId()`, `plan()`, `startedAtNanos()`, and `elapsedNanos()`.
 
-### @SmokeTestComponent
+### `@CommitComponent` / `@RollbackComponent`
 
-Marks a class that performs smoke tests after migration. Multiple smoke test components can be annotated.
+```java
+@CommitComponent
+public class MyCommitManager extends CommitManager {
+    public MyCommitManager() { super(new MyCracController()); }
+}
+
+@RollbackComponent
+public class MyRollbackManager extends RollbackManager {
+    public MyRollbackManager() { super(new MyCracController()); }
+}
+```
+
+> Rollback is implemented via CRaC checkpoint/restore. With the default `NoopCracController`, `restoreFromCheckpoint()` is unsupported — supply a real `CracController` if you need working rollback.
+
+### `@SmokeTestComponent`
 
 ```java
 @SmokeTestComponent
 public class MySmokeTest implements SmokeTest {
     public SmokeTestResult run(Map<MigratorDescriptor, List<Object>> migrated) {
-        // Verify migrated objects
         return SmokeTestResult.ok("my-smoke-test");
     }
 }
 ```
 
-**SmokeTestResult methods:**
-| Method | Description |
-|--------|-------------|
-| `ok(name)` | Create a successful result with test name |
-| `fail(name, message, error)` | Create a failed result with name, message, and optional exception |
-| `isOk()` | Check if the test passed |
-| `name()` | Get the test name |
-| `message()` | Get failure message (if failed) |
-| `error()` | Get cause exception (if any) |
+Each test is isolated — a thrown exception (including an `AssertionError`) becomes a failed result rather than aborting the run. `SmokeTestResult`: `ok(name)`, `fail(name, message, error)`, `isOk()`, `name()`, `message()`, `error()`.
 
-### @UpdateRegistry
+### `@UpdateRegistry`
 
-Marks fields (typically static) as registries/caches that should be updated.
+Marks fields (often static) holding registries/caches to update. Works for `Map`, `Collection`, arrays, and custom container types.
 
-**Attributes:**
 | Attribute | Type | Default | Description |
 |-----------|------|---------|-------------|
-| `replaceKeys` | boolean | true | Replace keys in Map-type registries |
-| `replaceValues` | boolean | true | Replace values in Map-type registries |
-| `deep` | boolean | true | Recursively update nested containers |
-| `reflective` | boolean | false | Use reflection for custom container types |
+| `replaceKeys` | boolean | `true` | Replace migrated keys in `Map` registries |
+| `replaceValues` | boolean | `true` | Replace migrated values / elements |
+| `deep` | boolean | `true` | Recursively patch nested container contents |
+| `reflective` | boolean | `false` | Drive custom container types via reflection |
 
 ```java
 public class UserCache {
@@ -328,357 +317,57 @@ public class UserCache {
 }
 ```
 
-## Migration Phases
+---
 
-The migration process consists of the following phases (tracked by `MigrationMetrics.Phase`):
+## Generic container updates
 
-1. **FIRST_PASS (Allocate & Migrate)**
-   - Walk heap to find all instances of source class
-   - Create new instances using the migrator
-   - Build forwarding table (old → new mapping)
-
-2. **CRITICAL_PHASE**
-   - `onBeforeCriticalPhase()` - Application should quiesce
-   - **SECOND_PASS** (sub-phase) - Patch all references in the heap
-   - **REGISTRY_UPDATE** (sub-phase) - Update static fields and registries
-   - Update generic containers (List<T>, Map<K,V>, etc.)
-   - `onAfterCriticalPhase()` - Application may resume
-
-3. **SMOKE_TEST (Validation)**
-   - Run smoke tests on migrated objects
-   - If tests fail, trigger rollback
-
-4. **Commit**
-   - Delete checkpoints
-   - Advance native epoch
-
-## Generic Container Updates
-
-The framework automatically updates generic containers holding migrated objects:
+The framework updates generic containers holding migrated objects, annotated or not:
 
 ```java
 class UserService {
-    private List<User> users;           // Auto-updated
-    private Map<String, User> cache;    // Auto-updated
-    private Set<User> activeUsers;      // Auto-updated
-    private User[] userArray;           // Auto-updated
-    private CustomRegistry<User> reg;   // Auto-updated (via reflection)
+    private List<User> users;            // updated
+    private Map<String, User> cache;     // updated
+    private Set<User> activeUsers;       // updated
+    private User[] userArray;            // updated
+    private CustomRegistry<User> reg;    // updated (via reflection)
 }
 ```
 
-To explicitly update containers:
+To update containers you hold directly:
 
 ```java
-// Update specific containers
-MigrationEngine.createAndMigrate(
-    classesToScan,
-    List.of(container1, container2),
-    User.class
-);
+// During migration
+MigrationEngine.createAndMigrate(classesToScan, classLoader, jarPath,
+                                 List.of(container1, container2), User.class);
 
-// Or via RegistryUpdater directly
+// Or via RegistryUpdater
 registryUpdater.updateGenericContainer(myList, User.class);
 registryUpdater.updateGenericContainers(containers, User.class);
 ```
 
-## Creating a Migration Payload
+In-place container rebuilds are exception-safe: if re-inserting the migrated contents fails partway (for example, a sorted set whose migrated element breaks the comparator), the original contents are restored rather than left empty or half-populated.
 
-1. **Create the new class version:**
-   ```java
-   public class NewUser implements User {
-       public final int id;
-       public final String name;
-       public final String email;  // New field
-
-       public NewUser(int id, String name, String email) {
-           this.id = id;
-           this.name = name;
-           this.email = email;
-       }
-   }
-   ```
-
-2. **Create the migrator:**
-   ```java
-   @Migrator
-   public class UserMigrator implements ClassMigrator<OldUser, NewUser> {
-       @Override
-       public NewUser migrate(OldUser old) {
-           return new NewUser(old.id, old.name, "unknown@example.com");
-       }
-   }
-   ```
-
-3. **Create the agent:**
-   ```java
-   public class MigrationAgent {
-       public static void agentmain(String agentArgs, Instrumentation inst) {
-           ClassLoader cl = MigrationAgent.class.getClassLoader();
-           MigrationEngine.createAndMigrate(
-               Set.of(ServiceMain.class),
-               cl,
-               agentArgs
-           );
-       }
-   }
-   ```
-
-4. **Configure Maven (pom.xml):**
-   ```xml
-   <plugin>
-       <groupId>org.apache.maven.plugins</groupId>
-       <artifactId>maven-jar-plugin</artifactId>
-       <configuration>
-           <archive>
-               <manifestEntries>
-                   <Agent-Class>migration.MigrationAgent</Agent-Class>
-                   <Can-Redefine-Classes>true</Can-Redefine-Classes>
-                   <Can-Retransform-Classes>true</Can-Retransform-Classes>
-               </manifestEntries>
-           </archive>
-       </configuration>
-   </plugin>
-   ```
-
-5. **Trigger migration:**
-   ```bash
-   java --add-modules jdk.attach \
-        -cp migration-payload.jar \
-        migrator.load.VirtualMachineAgentLoader <PID> migration-payload.jar
-   ```
-
-## API Reference
-
-### MigrationEngine
-
-| Method | Description |
-|--------|-------------|
-| `createAndMigrate(classesToScan)` | Create engine and run migration |
-| `createAndMigrate(classesToScan, classLoader, jarPath)` | With custom loader |
-| `createAndMigrate(classesToScan, classLoader, jarPath, genericContainers, interfaceType)` | With container updates |
-| `attachAndLoad(pid, agentJarPath)` | Attach to JVM and load agent |
-| `attachAndLoad(pid, agentJarPath, agentArgs)` | Attach with custom arguments |
-| `applyConfig(config)` | Apply migration configuration |
-| `loadAndApplyConfig()` | Load config from classpath and apply |
-| `setTimeoutConfig(config)` | Set timeout configuration |
-| `setAllTimeoutsSeconds(seconds)` | Set all timeouts to same value |
-| `setFullHeapWalk(boolean)` | Enable/disable full heap walk |
-| `isFullHeapWalk()` | Check if full heap walk is enabled |
-| `getTimeoutConfig()` | Get current timeout configuration |
-| `migrate(classesToScan, containers, interfaceType)` | Run migration with container updates |
-| `migrateWithTimeout(classesToScan, containers, interfaceType, timeout)` | Run migration with overall timeout |
-| `getLastMetrics()` | Get metrics from last migration |
-| `validateHeapSize(config)` | Validate heap against config limits |
-
-### MigrationConfig
-
-| Method | Description |
-|--------|-------------|
-| `builder()` | Create a new configuration builder |
-| `heapWalkMode()` | Get heap walk mode (FULL/SPEC) |
-| `isFullHeapWalk()` | Check if full heap walk is enabled |
-| `heapWalkTimeout()` | Get heap walk timeout |
-| `criticalPhaseTimeout()` | Get critical phase timeout |
-| `smokeTestTimeout()` | Get smoke test timeout |
-| `minHeapSizeMb()` | Get minimum heap size requirement |
-| `maxHeapSizeMb()` | Get maximum heap size limit |
-| `historySize()` | Get history size limit |
-| `alertLevel()` | Get alert logging level |
-
-**Builder Methods:**
-
-| Method | Description |
-|--------|-------------|
-| `heapWalkMode(HeapWalkMode)` | Set heap walk mode |
-| `heapWalkTimeout(Duration)` | Set heap walk timeout |
-| `heapWalkTimeoutSeconds(long)` | Set heap walk timeout in seconds |
-| `heapSnapshotTimeout(Duration)` | Set heap snapshot timeout |
-| `heapSnapshotTimeoutSeconds(long)` | Set heap snapshot timeout in seconds |
-| `criticalPhaseTimeout(Duration)` | Set critical phase timeout |
-| `criticalPhaseTimeoutSeconds(long)` | Set critical phase timeout in seconds |
-| `smokeTestTimeout(Duration)` | Set smoke test timeout |
-| `smokeTestTimeoutSeconds(long)` | Set smoke test timeout in seconds |
-| `allTimeoutsSeconds(long)` | Set all timeouts to the same value |
-| `minHeapSizeMb(long)` | Set minimum heap size requirement |
-| `maxHeapSizeMb(long)` | Set maximum heap size limit |
-| `historySize(int)` | Set history size limit |
-| `alertLevel(AlertLevel)` | Set alert logging level |
-| `build()` | Build the configuration |
-
-### MigrationConfigLoader
-
-| Method | Description |
-|--------|-------------|
-| `load()` | Load config from classpath |
-| `loadFromFile(path)` | Load config from external file |
-
-### MigrationTimeoutConfig
-
-| Method | Description |
-|--------|-------------|
-| `builder()` | Create a new timeout configuration builder |
-| `heapWalkTimeout()` | Get heap walk timeout |
-| `heapSnapshotTimeout()` | Get heap snapshot timeout |
-| `criticalPhaseTimeout()` | Get critical phase timeout |
-| `smokeTestTimeout()` | Get smoke test timeout |
-
-**Builder Methods:**
-
-| Method | Description |
-|--------|-------------|
-| `heapWalkTimeout(Duration)` | Set heap walk timeout |
-| `heapWalkTimeoutSeconds(long)` | Set heap walk timeout in seconds |
-| `heapSnapshotTimeout(Duration)` | Set heap snapshot timeout |
-| `heapSnapshotTimeoutSeconds(long)` | Set heap snapshot timeout in seconds |
-| `criticalPhaseTimeout(Duration)` | Set critical phase timeout |
-| `criticalPhaseTimeoutSeconds(long)` | Set critical phase timeout in seconds |
-| `smokeTestTimeout(Duration)` | Set smoke test timeout |
-| `smokeTestTimeoutSeconds(long)` | Set smoke test timeout in seconds |
-| `allTimeoutsSeconds(long)` | Set all timeouts to the same value |
-| `build()` | Build the configuration |
-
-### MigrationMetrics
-
-| Method | Description |
-|--------|-------------|
-| `migrationId()` | Get migration identifier |
-| `totalDurationMs()` | Get total duration in milliseconds |
-| `totalDuration()` | Get total duration as Duration |
-| `phaseDuration(phase)` | Get duration for specific phase |
-| `objectsMigrated()` | Get count of migrated objects |
-| `objectsPatched()` | Get count of patched objects |
-| `migratorCount()` | Get number of migrators executed |
-| `startTime()` | Get migration start timestamp |
-| `endTime()` | Get migration end timestamp |
-| `heapDelta()` | Get heap memory change in bytes |
-| `memoryBefore()` / `memoryAfter()` | Get memory snapshots (MemoryMetrics) |
-| `cpu()` | Get CPU metrics (CpuMetrics) |
-| `summary()` | Get human-readable summary |
-| `toMap()` | Convert to Map for JSON |
-
-**MemoryMetrics:**
-| Method | Description |
-|--------|-------------|
-| `heapUsed()` | Heap memory used in bytes |
-| `heapCommitted()` | Heap memory committed in bytes |
-| `heapMax()` | Maximum heap size in bytes |
-| `nonHeapUsed()` | Non-heap memory used in bytes |
-| `heapSummary()` | Human-readable heap summary |
-
-**CpuMetrics:**
-| Method | Description |
-|--------|-------------|
-| `before()` | CPU usage before migration (0.0-1.0) |
-| `after()` | CPU usage after migration (0.0-1.0) |
-| `peak()` | Peak CPU usage during migration (0.0-1.0) |
-| `processors()` | Number of available processors |
-| `summary()` | Human-readable CPU summary |
-
-### MigrationState
-
-| Method | Description |
-|--------|-------------|
-| `getInstance()` | Get singleton instance |
-| `getStatus()` | Get current status (IDLE/IN_PROGRESS/SUCCESS/FAILED) |
-| `getCurrentPhase()` | Get current migration phase |
-| `getCurrentMigrationId()` | Get current migration ID |
-| `getLastMetrics()` | Get last migration metrics |
-| `getLastError()` | Get last error message |
-| `getHistory()` | Get migration history |
-| `toMap()` | Convert to Map for JSON |
-
-### MigrationHistoryEntry
-
-| Method | Description |
-|--------|-------------|
-| `migrationId()` | Get migration identifier |
-| `status()` | Get final status (SUCCESS/FAILED) |
-| `timestamp()` | Get completion timestamp |
-| `metrics()` | Get migration metrics (contains duration, object counts, etc.) |
-| `errorMessage()` | Get error message (if failed) |
-
-### RegistryUpdater
-
-| Method | Description |
-|--------|-------------|
-| `updateAnnotatedRegistries(classes, heapObjects)` | Update @UpdateRegistry fields |
-| `updateGenericContainer(container, interfaceType)` | Update single container |
-| `updateGenericContainers(containers, interfaceType)` | Update multiple containers |
-| `updateGenericFieldsInClasses(classes, heapObjects, interfaceTypes)` | Scan and update generic fields |
-
-### MigratorDescriptor
-
-Describes a migrator class and its type mappings (used in smoke tests and metrics).
-
-| Method | Description |
-|--------|-------------|
-| `migrator()` | Get the migrator implementation instance |
-| `from()` | Get the source (old) class type being migrated |
-| `to()` | Get the target (new) class type after migration |
-| `commonInterface()` | Get the common interface shared by source and target |
-
-### AgentLoader
-
-| Method | Description |
-|--------|-------------|
-| `load(pid, agentJarPath)` | Load agent into target JVM |
-| `load(pid, agentJarPath, agentArgs)` | Load with custom arguments |
-
-### Enums
-
-**HeapWalkMode:**
-| Value | Description |
-|-------|-------------|
-| `FULL` | Walk entire heap to find all instances |
-| `SPEC` | Use specification-based targeted heap walk |
-
-**AlertLevel:**
-| Value | Description |
-|-------|-------------|
-| `DEBUG` | All events (started, phases, completed) |
-| `WARNING` | Warnings and errors only |
-| `ERROR` | Errors only (migration failed, rollback failed) |
-
-**MigrationState.Status:**
-| Value | Description |
-|-------|-------------|
-| `IDLE` | No migration in progress |
-| `IN_PROGRESS` | Migration currently running |
-| `SUCCESS` | Last migration completed successfully |
-| `FAILED` | Last migration failed |
-
-**MigrationMetrics.Phase:**
-| Value | Description |
-|-------|-------------|
-| `FIRST_PASS` | Object allocation and migration |
-| `CRITICAL_PHASE` | Reference patching and registry updates |
-| `SECOND_PASS` | Patching remaining references (within critical phase) |
-| `REGISTRY_UPDATE` | Registry update phase (within critical phase) |
-| `SMOKE_TEST` | Smoke test execution |
+---
 
 ## Configuration
 
-Migration behavior can be configured via `migration.properties` or `migration.yml` on the classpath.
-
-### Configuration Properties
+Configure via `migration.properties` or `migration.yml` on the classpath, or programmatically. System properties (`-Dmigration.*`) override file values.
 
 | Property | Description | Default |
 |----------|-------------|---------|
-| `migration.heap.walk.mode` | Heap walk strategy: `FULL` or `SPEC` | `FULL` |
-| `migration.timeout.heap.walk` | Heap walk timeout in seconds | 0 (disabled) |
-| `migration.timeout.heap.snapshot` | Heap snapshot timeout in seconds | 0 (disabled) |
-| `migration.timeout.critical.phase` | Critical phase timeout in seconds | 0 (disabled) |
-| `migration.timeout.smoke.test` | Smoke test timeout in seconds | 0 (disabled) |
-| `migration.heap.size.min` | Minimum required heap size in MB | 0 (disabled) |
-| `migration.heap.size.max` | Maximum allowed used heap in MB | 0 (disabled) |
-| `migration.history.size` | Number of migration history entries | 10 |
-| `migration.alert.level` | Logging level: `DEBUG`, `WARNING`, `ERROR` | `WARNING` |
+| `migration.heap.walk.mode` | Heap walk strategy: `FULL` or `SPEC` | `SPEC` |
+| `migration.timeout.heap.walk` | Heap-walk timeout (seconds) | `0` (disabled) |
+| `migration.timeout.heap.snapshot` | Heap-snapshot timeout (seconds) | `0` (disabled) |
+| `migration.timeout.critical.phase` | Critical-phase timeout (seconds) | `0` (disabled) |
+| `migration.timeout.smoke.test` | Smoke-test timeout (seconds) | `0` (disabled) |
+| `migration.heap.size.min` | Minimum required max-heap (MB) | `0` (disabled) |
+| `migration.heap.size.max` | Maximum allowed used-heap (MB) | `0` (disabled) |
+| `migration.history.size` | Migration history entries to retain | `10` |
+| `migration.alert.level` | `DEBUG`, `WARNING`, or `ERROR` | `WARNING` |
 
-### Example Configuration
-
-**migration.properties:**
+**migration.properties**
 ```properties
-migration.heap.walk.mode=FULL
+migration.heap.walk.mode=SPEC
 migration.timeout.heap.walk=60
 migration.timeout.critical.phase=30
 migration.timeout.smoke.test=10
@@ -687,32 +376,24 @@ migration.alert.level=DEBUG
 migration.history.size=20
 ```
 
-**migration.yml:**
+**migration.yml**
 ```yaml
 migration:
   heap:
-    walk:
-      mode: FULL
-    size:
-      min: 512
+    walk: { mode: SPEC }
+    size: { min: 512 }
   timeout:
-    heap:
-      walk: 60
-    critical:
-      phase: 30
-    smoke:
-      test: 10
-  alert:
-    level: DEBUG
-  history:
-    size: 20
+    heap: { walk: 60 }
+    critical: { phase: 30 }
+    smoke: { test: 10 }
+  alert: { level: DEBUG }
+  history: { size: 20 }
 ```
 
-### Programmatic Configuration
-
+**Programmatic**
 ```java
 MigrationConfig config = MigrationConfig.builder()
-    .heapWalkMode(HeapWalkMode.FULL)
+    .heapWalkMode(HeapWalkMode.SPEC)
     .heapWalkTimeoutSeconds(60)
     .criticalPhaseTimeoutSeconds(30)
     .smokeTestTimeoutSeconds(10)
@@ -725,71 +406,66 @@ MigrationEngine engine = new MigrationEngine(classLoader, jarPath);
 engine.applyConfig(config);
 ```
 
-## Metrics and Monitoring
+---
 
-### Migration Metrics
-
-The framework collects comprehensive metrics during migration:
+## Timeouts
 
 ```java
-MigrationMetrics metrics = MigrationEngine.getLastMetrics();
+MigrationConfig config = MigrationConfig.builder()
+    .heapWalkTimeoutSeconds(60)      // heap traversal
+    .heapSnapshotTimeoutSeconds(30)  // per-class snapshots
+    .criticalPhaseTimeoutSeconds(30) // phase-listener callbacks
+    .smokeTestTimeoutSeconds(10)     // smoke-test execution
+    .build();
 
-// Timing
-long totalMs = metrics.totalDurationMs();
-long firstPassMs = metrics.phaseDuration(Phase.FIRST_PASS);
-long criticalPhaseMs = metrics.phaseDuration(Phase.CRITICAL_PHASE);
-
-// Object counts
-int migrated = metrics.objectsMigrated();
-int patched = metrics.objectsPatched();
-
-// Memory
-long heapDelta = metrics.heapDelta();
-String heapSummary = metrics.memoryAfter().heapSummary();
-
-// CPU
-String cpuSummary = metrics.cpu().summary();
-
-// Human-readable summary
-System.out.println(metrics.summary());
-// Output: Migration #1 in 234ms | Heap: 128.5MB / 256.0MB (max 4.0GB) (delta: 12.3MB) | CPU: 15.2% -> 8.1% (peak: 45.3%) | Objects: 1000 migrated, 5000 patched
-
-// JSON serialization
-Map<String, Object> metricsMap = metrics.toMap();
+// or all at once
+engine.setAllTimeoutsSeconds(60);
+engine.setTimeoutConfig(MigrationTimeoutConfig.builder().allTimeoutsSeconds(60).build());
 ```
 
-### Migration State
+When a timeout is exceeded, a `MigrationTimeoutException` is thrown, rollback is triggered, and the failure is logged with the `MIGRATION_TIMEOUT` marker. A timed-out migration is never both committed and rolled back: the engine settles the outcome atomically even though the per-phase timeouts run the work on a separate thread.
 
-Track migration status across the JVM:
+---
+
+## Metrics & monitoring
+
+### Metrics
+
+```java
+MigrationMetrics m = MigrationEngine.getLastMetrics();
+
+long total    = m.totalDurationMs();
+long firstMs  = m.phaseDuration(Phase.FIRST_PASS);
+int  migrated = m.objectsMigrated();
+int  patched  = m.objectsPatched();
+long delta    = m.heapDelta();
+
+System.out.println(m.summary());
+// Migration #1 in 234ms | Heap: 128.5MB / 256.0MB (max 4.0GB) (delta: 12.3MB) | CPU: 15.2% -> 8.1% (peak: 45.3%) | Objects: 1000 migrated, 5000 patched
+
+Map<String, Object> json = m.toMap();   // null-safe even for partially-built metrics
+```
+
+### State & history
 
 ```java
 MigrationState state = MigrationState.getInstance();
 
-// Current status
-MigrationState.Status status = state.getStatus();  // IDLE, IN_PROGRESS, SUCCESS, FAILED
+MigrationState.Status status = state.getStatus();    // IDLE, IN_PROGRESS, SUCCESS, FAILED
+Phase phase                  = state.getCurrentPhase();
+long id                      = state.getCurrentMigrationId();
+String lastError             = state.getLastError();
 
-// During migration
-Phase currentPhase = state.getCurrentPhase();
-long migrationId = state.getCurrentMigrationId();
-
-// After migration
-String lastError = state.getLastError();
-MigrationMetrics lastMetrics = state.getLastMetrics();
-
-// History
-List<MigrationHistoryEntry> history = state.getHistory();
-for (MigrationHistoryEntry entry : history) {
-    System.out.printf("Migration %d: %s at %s%n",
-        entry.migrationId(), entry.status(), entry.timestamp());
+for (MigrationHistoryEntry e : state.getHistory()) {  // most-recent-first, bounded snapshot
+    System.out.printf("Migration %d: %s at %s%n", e.migrationId(), e.status(), e.timestamp());
 }
 
-// JSON for monitoring endpoints
-Map<String, Object> stateMap = state.toMap();
+Map<String, Object> stateJson = state.toMap();        // for monitoring endpoints
 ```
 
-### Alert Logging
+### Alert logging
 
-Migration events are logged with structured format for log aggregators:
+Events are logged in a structured, aggregator-friendly format:
 
 ```
 12:00:00.000 INFO  migration - MIGRATION_STARTED id=42
@@ -798,44 +474,88 @@ Migration events are logged with structured format for log aggregators:
 12:00:01.000 INFO  migration - MIGRATION_COMPLETED id=42 duration_ms=1000 objects_migrated=500
 ```
 
-Configure alert level to control verbosity:
-- `DEBUG` - All events (started, phases, completed)
-- `WARNING` - Warnings and errors only (rollback triggered)
-- `ERROR` - Errors only (migration failed, rollback failed)
+`AlertLevel` controls verbosity: `DEBUG` (all), `WARNING` (rollback + errors), `ERROR` (errors only). Errors are always logged.
 
-## Timeouts
+---
 
-Configure timeouts to prevent migrations from hanging:
+## Performance & guarantees
 
-```java
-// Via configuration
-MigrationConfig config = MigrationConfig.builder()
-    .heapWalkTimeoutSeconds(60)      // Heap traversal
-    .heapSnapshotTimeoutSeconds(30)  // Per-class snapshots
-    .criticalPhaseTimeoutSeconds(30) // Phase listener callbacks
-    .smokeTestTimeoutSeconds(10)     // Smoke test execution
-    .build();
+Migration cost scales with the number of objects involved — not with total heap bytes or the shape of the object graph.
 
-// Or via MigrationTimeoutConfig
-MigrationTimeoutConfig timeouts = MigrationTimeoutConfig.builder()
-    .allTimeoutsSeconds(60)  // Set all timeouts at once
-    .build();
+- **Heap discovery is O(N).** The native agent tags all matching objects with a single per-walk tag and resolves them in one `GetObjectsWithTags` call, avoiding the O(N²) trap of querying many distinct tags. A per-walk epoch keeps each walk's tag distinct from earlier ones.
+- **Filtered ("SPEC") heap walk is the default.** During the critical phase the engine walks only the classes that can hold references to migrated objects, instead of the whole heap. Use `FULL` mode for an exhaustive scan.
+- **Reference patching is iterative and cycle-safe.** The patcher traverses with an explicit work-stack (not recursion), so deep or large cyclic graphs — linked lists, trees, rings — are patched without `StackOverflowError`; an identity-based visited set prevents reprocessing.
+- **Large objects are cheap.** Primitive bulk arrays are skipped, so migrating a few very large objects costs almost nothing. Whether payload data is copied or shared is up to your `migrate()` (share to avoid duplicating memory).
 
-engine.setTimeoutConfig(timeouts);
+**Indicative numbers** (JDK 26, 16 cores, SPEC mode; see `migrator/src/test/java/migrator/benchmark/`):
 
-// Convenience methods
-engine.setAllTimeoutsSeconds(60);
-engine.setAllTimeouts(Duration.ofMinutes(1));
-```
+| Workload | Result |
+|----------|--------|
+| 500,000 small objects (List + Map) | full migration ~3.2 s |
+| 1,000,000 nodes across cyclic graphs | 100% patched, ~5.6 s, no stack overflow |
+| 25 × 100 MB objects (2.5 GB) | migrated in ~7 ms (primitive bulk skipped, arrays shared) |
 
-When a timeout is exceeded:
-1. A `MigrationTimeoutException` is thrown
-2. Rollback is triggered automatically
-3. The error is logged with `MIGRATION_TIMEOUT` marker
+---
 
-## JVM Requirements
+## Creating a migration payload
 
-The target JVM must be started with the native agent for heap walking:
+1. **New class version**
+   ```java
+   public class NewUser implements User {
+       public final int id;
+       public final String name;
+       public final String email;   // new field
+       public NewUser(int id, String name, String email) { /* ... */ }
+   }
+   ```
+
+2. **Migrator**
+   ```java
+   @Migrator
+   public class UserMigrator implements ClassMigrator<OldUser, NewUser> {
+       @Override public NewUser migrate(OldUser old) {
+           return new NewUser(old.id, old.name, "unknown@example.com");
+       }
+   }
+   ```
+
+3. **Agent entry point**
+   ```java
+   public class MigrationAgent {
+       public static void agentmain(String agentArgs, Instrumentation inst) {
+           ClassLoader cl = MigrationAgent.class.getClassLoader();
+           MigrationEngine.createAndMigrate(Set.of(ServiceMain.class), cl, agentArgs);
+       }
+   }
+   ```
+
+4. **Agent JAR manifest (pom.xml)**
+   ```xml
+   <plugin>
+     <groupId>org.apache.maven.plugins</groupId>
+     <artifactId>maven-jar-plugin</artifactId>
+     <configuration>
+       <archive><manifestEntries>
+         <Agent-Class>migration.MigrationAgent</Agent-Class>
+         <Can-Redefine-Classes>true</Can-Redefine-Classes>
+         <Can-Retransform-Classes>true</Can-Retransform-Classes>
+       </manifestEntries></archive>
+     </configuration>
+   </plugin>
+   ```
+
+5. **Trigger against a running PID**
+   ```bash
+   java --add-modules jdk.attach \
+        -cp migration-payload.jar \
+        migrator.load.VirtualMachineAgentLoader <PID> migration-payload.jar
+   ```
+
+---
+
+## JVM requirements
+
+The **target** JVM must run with the native agent loaded (it provides the JVMTI heap-walk and its JNI bindings):
 
 ```bash
 java -agentpath:/path/to/libagent.so \
@@ -845,23 +565,116 @@ java -agentpath:/path/to/libagent.so \
      -jar your-application.jar
 ```
 
-## Building
+The `--add-opens` flags let the reflective patcher access fields in JDK-adjacent types. Add `-XX:+EnableDynamicAgentLoading` to suppress the JDK 21+ dynamic-agent-loading warning when attaching.
+
+---
+
+## Building & testing
 
 ```bash
-# Build the library only
+# Library only
 mvn clean install
 
-# Build everything including examples
+# Everything, including examples
 mvn clean install -Pexamples
 
-# Build native agent
-gcc -fPIC \
-    -I"${JAVA_HOME}/include" \
-    -I"${JAVA_HOME}/include/linux" \
-    -shared \
-    -o agent/libagent.so \
-    agent/agent.c
+# Unit tests
+mvn test
 
-# Build Docker images
+# Native agent
+gcc -fPIC -I"${JAVA_HOME}/include" -I"${JAVA_HOME}/include/linux" \
+    -shared -O2 -o agent/libagent.so agent/agent.c
+
+# Docker images
 docker compose -f examples/docker-compose.yml build
 ```
+
+### Test tiers
+
+The suite has three tiers, all driven by `mvn test`:
+
+1. **Pure-Java unit tests** — the bulk of the suite. Engine orchestration, plan ordering/cycle detection, reference patching (including cycles, sorted/concurrent containers, and exception-safe rebuilds), registry updates, config, metrics, and the `MigrationState` machine. No native agent required.
+2. **Native heap-walk tests** (`migrator/heap/NativeHeapWalkerTest`). These exercise the real JNI/JVMTI methods. Because the surefire JVM is not started with `-agentpath`, the test **self-attaches** the agent at runtime (it builds `libagent.so` from source when a toolchain is present, otherwise uses the committed `agent/libagent.so`). This needs `-Djdk.attach.allowAttachSelf=true`, which the module's surefire config already sets. If the agent can't be loaded (no toolchain, attach disabled, unsupported platform), these tests **skip** rather than fail, so `mvn test` stays green everywhere.
+3. **Benchmarks** (`migrator/src/test/java/migrator/benchmark/`) — standalone `main` programs (not JUnit), run manually with the agent on `-agentpath`:
+
+   ```bash
+   mvn -q -pl migrator dependency:build-classpath -Dmdep.outputFile=/tmp/cp.txt
+
+   java -Xmx5g -agentpath:"$PWD/agent/libagent.so" -XX:+EnableDynamicAgentLoading \
+        -cp "migrator/target/classes:migrator/target/test-classes:$(cat /tmp/cp.txt)" \
+        migrator.benchmark.HeapStressTest   # or CyclicGraphBench / LargeObjectBench / WalkPatchProbe
+   ```
+
+   | Benchmark | Exercises |
+   |-----------|-----------|
+   | `HeapStressTest` | object-count scaling (1K → 500K) |
+   | `CyclicGraphBench` | deep/wide/many cyclic graphs (cycle safety, no stack overflow) |
+   | `LargeObjectBench` | a few very large objects (size-independence, no copy) |
+   | `WalkPatchProbe` | isolates native heap-walk time vs. Java patch time |
+
+---
+
+## API reference
+
+### `MigrationEngine`
+
+| Method | Description |
+|--------|-------------|
+| `createAndMigrate(classesToScan)` | Create an engine and run a migration |
+| `createAndMigrate(classesToScan, classLoader, jarPath)` | …with a custom loader |
+| `createAndMigrate(classesToScan, classLoader, jarPath, genericContainers, interfaceType)` | …with container updates |
+| `attachAndLoad(pid, agentJarPath[, agentArgs])` | Attach to a JVM and load the agent |
+| `applyConfig(config)` / `loadAndApplyConfig()` | Apply / load+apply configuration |
+| `setTimeoutConfig(config)` / `setAllTimeoutsSeconds(s)` | Configure timeouts |
+| `setFullHeapWalk(boolean)` / `isFullHeapWalk()` | Toggle/query FULL vs SPEC heap walk |
+| `migrate(classesToScan, containers, interfaceType)` | Run a migration |
+| `migrateWithTimeout(classesToScan, containers, interfaceType, timeout)` | Run with an overall timeout |
+| `getLastMetrics()` | Metrics from the last migration |
+| `validateHeapSize(config)` | Validate the heap against config limits |
+
+### `MigrationConfig`
+
+Getters: `heapWalkMode()`, `isFullHeapWalk()`, `heapWalkTimeout()`, `heapSnapshotTimeout()`, `criticalPhaseTimeout()`, `smokeTestTimeout()`, `minHeapSizeMb()`, `maxHeapSizeMb()`, `historySize()`, `alertLevel()`. Build via `MigrationConfig.builder()`; `MigrationConfig.DEFAULTS` is the all-defaults instance (SPEC, no timeouts, WARNING, history 10).
+
+### `MigrationConfigLoader`
+
+| Method | Description |
+|--------|-------------|
+| `load()` | Load from the classpath (`migration.properties`/`migration.yml`; throws if absent) |
+| `loadFromFile(path)` | Load from an external `.properties`/`.yml` file |
+
+### `MigrationMetrics`
+
+`migrationId()`, `totalDurationMs()`, `totalDuration()`, `phaseDuration(phase)`, `objectsMigrated()`, `objectsPatched()`, `migratorCount()`, `startTime()`, `endTime()`, `heapDelta()`, `memoryBefore()`/`memoryAfter()` (→ `MemoryMetrics`), `cpu()` (→ `CpuMetrics`), `summary()`, `toMap()`.
+
+- **MemoryMetrics:** `heapUsed()`, `heapCommitted()`, `heapMax()`, `nonHeapUsed()`, `heapSummary()`.
+- **CpuMetrics:** `before()`, `after()`, `peak()`, `processors()`, `summary()`.
+
+### `MigrationState` / `MigrationHistoryEntry`
+
+- **MigrationState:** `getInstance()`, `getStatus()`, `getCurrentPhase()`, `getCurrentMigrationId()`, `getLastMetrics()`, `getLastError()`, `getHistory()`, `setMaxHistorySize(n)`, `toMap()`, `reset()`.
+- **MigrationHistoryEntry:** `migrationId()`, `status()`, `timestamp()`, `metrics()`, `errorMessage()`.
+
+### `RegistryUpdater`
+
+| Method | Description |
+|--------|-------------|
+| `updateAnnotatedRegistries(classes, heapObjects)` | Update `@UpdateRegistry` fields |
+| `updateGenericContainer(container, interfaceType)` | Update a single container |
+| `updateGenericContainers(containers, interfaceType)` | Update multiple containers |
+| `updateGenericFieldsInClasses(classes, heapObjects, interfaceTypes)` | Scan & update generic fields |
+
+### `MigratorDescriptor`
+
+`migrator()`, `from()`, `to()`, `commonInterface()` — describes a migrator and its type mapping (used by the plan, smoke tests, and metrics). The migrator class needs a no-arg constructor of any visibility.
+
+### `AgentLoader`
+
+`load(pid, agentJarPath)`, `load(pid, agentJarPath, agentArgs)`.
+
+### Enums
+
+- **HeapWalkMode** — `FULL` (entire heap) · `SPEC` (only classes that can reference migrated objects; **default**).
+- **AlertLevel** — `DEBUG` (all) · `WARNING` (warnings + errors) · `ERROR` (errors only).
+- **MigrationState.Status** — `IDLE` · `IN_PROGRESS` · `SUCCESS` · `FAILED`.
+- **MigrationMetrics.Phase** — `FIRST_PASS` · `CRITICAL_PHASE` · `SECOND_PASS` · `REGISTRY_UPDATE` · `SMOKE_TEST`.
